# maze-game

./: .gitignore  Cargo.toml  README.md  xtest
10/: Makefile
10/Tests/: 0-in.json  0-out.json  1-in.json  2-in.json  3-in.json  4-in.json
10/testfest/: make.txt  score.txt  staff-server-student-clients.txt  student-server-staff-clients.txt  test-audit-results.txt
10/testfest/17/: 0-in.json  0-out.json  1-in.json  2-in.json  2-out.json  3-in.json  3-out.json  4-in.json  4-out.json
2/: inspection.txt  score.txt  self-2.md
3/: Makefile  self-3.md  xboard
3/Tests/: 0-in.json  1-in.json  2-in.json  2-out.json
3/Xboard/: Cargo.toml
3/Xboard/src/: main.rs
3/testfest/: inspection.md  make.txt  score.txt  test-audit-results.txt  test-results.txt  testfest.txt
3/testfest/0/: 0.txt
3/testfest/10/: 10.txt
3/testfest/11/: 11.txt
3/testfest/14/: 14.txt
3/testfest/15/: 15.txt
3/testfest/16/: 16.txt
3/testfest/19/: 19.txt
3/testfest/2/: 2.txt
3/testfest/20/: 20.txt
3/testfest/21/: 21.txt
3/testfest/23/: 23.txt
3/testfest/24/: 24.txt
3/testfest/26/: 26.txt
3/testfest/27/: 27.txt
3/testfest/29/: 29.txt
3/testfest/30/: 30.txt
3/testfest/33/: 33.txt
3/testfest/34/: 34.txt
3/testfest/37/: 37.txt
3/testfest/39/: 39.txt
3/testfest/4/: 4.txt
3/testfest/40/: 40.txt
3/testfest/41/: 41.txt
3/testfest/42/: 42.txt
3/testfest/49/: 49.txt
3/testfest/5/: 5.txt
3/testfest/51/: 51.txt
3/testfest/52/: 52.txt
3/testfest/53/: 53.txt
3/testfest/55/: 55.txt
3/testfest/58/: 58.txt
3/testfest/59/: 59.txt
3/testfest/6/: 6.txt
3/testfest/60/: 60.txt
3/testfest/62/: 62.txt
3/testfest/64/: 64.txt
3/testfest/7/: 7.txt
4/: Makefile  self-4.md
4/Tests/: 0-in.json  0-out.json  1-in.json  2-in.json  2-out.json  3-in.json  3-out.json  4-in.json  4-out.json
4/Xstate/: Cargo.toml
4/Xstate/src/: main.rs
4/testfest/: inspection.md  make.txt  score.txt  test-audit-results.txt  test-results.txt  testfest.txt
4/testfest/0/: 0.txt
4/testfest/10/: 10.txt
4/testfest/11/: 11.txt
4/testfest/12/: 12.txt
4/testfest/14/: 14.txt
4/testfest/15/: 15.txt
4/testfest/16/: 16.txt
4/testfest/17/: 17.txt
4/testfest/19/: 19.txt
4/testfest/22/: 22.txt
4/testfest/24/: 24.txt
4/testfest/25/: 25.txt
4/testfest/26/: 26.txt
4/testfest/28/: 28.txt
4/testfest/3/: 3.txt
4/testfest/30/: 30.txt
4/testfest/32/: 32.txt
4/testfest/34/: 34.txt
4/testfest/36/: 36.txt
4/testfest/37/: 37.txt
4/testfest/38/: 38.txt
4/testfest/39/: 39.txt
4/testfest/41/: 41.txt
4/testfest/42/: 42.txt
4/testfest/43/: 43.txt
4/testfest/44/: 44.txt
4/testfest/45/: 45.txt
4/testfest/48/: 48.txt
4/testfest/49/: 49.txt
4/testfest/5/: 5.txt
4/testfest/51/: 51.txt
4/testfest/52/: 52.txt
4/testfest/53/: 53.txt
4/testfest/54/: 54.txt
4/testfest/55/: 55.txt
4/testfest/56/: 56.txt
4/testfest/57/: 57.txt
4/testfest/59/: 59.txt
4/testfest/6/: 6.txt
4/testfest/60/: 60.txt
4/testfest/61/: 61.txt
4/testfest/63/: 63.txt
4/testfest/64/: 64.txt
4/testfest/8/: 8.txt
4/testfest/9/: 9.txt
5/: Makefile  self-5.md
5/Tests/: 0-in.json  0-out.json  1-in.json  2-in.json  3-in.json  3-out.json  4-in.json  4-out.json
5/Xchoice/: Cargo.toml
5/Xchoice/src/: main.rs
5/testfest/: inspection.md  make.txt  score.txt  test-audit-results.txt  test-results.txt  testfest.txt
5/testfest/0/: 0.txt
5/testfest/1/: 1.txt
5/testfest/10/: 10.txt
5/testfest/11/: 11.txt
5/testfest/13/: 13.txt
5/testfest/15/: 15.txt
5/testfest/16/: 16.txt
5/testfest/17/: 17.txt
5/testfest/18/: 18.txt
5/testfest/19/: 19.txt
5/testfest/2/: 2.txt
5/testfest/23/: 23.txt
5/testfest/24/: 24.txt
5/testfest/25/: 25.txt
5/testfest/26/: 26.txt
5/testfest/27/: 27.txt
5/testfest/29/: 29.txt
5/testfest/30/: 30.txt
6/: Makefile
6/Tests/: 0-in.json  0-out.json  1-in.json  1-out.json  2-in.json
6/XGame/: Cargo.toml
6/XGame/src/: lib.rs  main.rs  observer-main.rs
6/testfest/: inspection.md  make.txt  score.txt  test-audit-results.txt  test-results.txt  testfest.txt
7/: Makefile  self-7.md
7/Tests/: 0-in.json  0-out.json  1-in.json  1-out.json  2-in.json  2-out.json  sample-tests-for-7.tar
7/Xbad_/: Cargo.toml
7/testfest/: inspection.md  make.txt  score.txt  test-audit-results.txt  test-results.txt  testfest.txt
8/: Makefile  invalid_tests.sh  self-8.md
8/Tests/: 0-in.json  1-in.json  2-in.json  2-out.json  3-in.json  3-out.json  4-in.json  4-out.json
8/Xbad2/: Cargo.toml
8/Xbad2/src/: lib.rs  main.rs
8/testfest/: inspection.md  make.txt  score.txt  test-audit-results.txt  test-results.txt  testfest.txt
9/: Makefile  self-9.md
9/testfest/: inspection.md  make.txt  score.txt  staff-server-student-clients.txt  student-server-staff-clients.txt
B/: Makefile  test-results.txt  xcollects  xtest
B/Other/: Cargo.toml
C/: Makefile
C/Other/: Cargo.toml
C/Tests/: 0-in.json  0-out.json  1-out.json  2-in.json  2-out.json
C/testfest/: score.txt  test-audit-results.txt  test-results.txt
D/: Makefile
D/Other/: Cargo.toml
D/testfest/: inspection.txt  score.txt
E/: Makefile  self-E.md
E/Other/: Cargo.toml
E/Tests/: 1-in.json  2-out.json
E/testfest/: first-make.txt  inspection.txt  make.txt  score.txt  test-audit-results.txt  test-results.txt  testfest.txt
Maze/: Cargo.toml
Maze/.cargo/: config
Maze/Client/: Cargo.toml  client.rs  run6.sh
Maze/Common/: Board.rs  Cargo.toml  README.md  board.rs  color.rs  gem.rs  grid.rs  json.rs  lib.rs  state.rs  tile.rs
Maze/Planning/: changes.md  interactive-player.md  player-protocol-sequence-remote.md  player-protocol-sequence.md  player-protocol.md  player.md  questions-about-the-game.md  remote.md  revisions.md  sprints.md  state.md  todo.md
Maze/Players/: Cargo.toml  README.md  bad_player.rs  json.rs  lib.rs  player.rs  strategy.rs  todo.md
Maze/Referee/: Cargo.toml  README.md  config.rs  json.rs  lib.rs  observer.rs  player.rs  referee.rs
Maze/Remote/: Cargo.toml  json.rs  lib.rs  player.rs  referee.rs
Maze/Server/: Cargo.toml  server.rs
(+836 files in other folders)
