[package]
name = "xchoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../../Maze/Common/"}
players = {path = "../../Maze/Players/"}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
