[package]
name = "XGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="xgames"
path="src/main.rs"

[[bin]]
name="xgames-with-observer"
path="src/observer-main.rs"

[dependencies]
common = { path="../../Maze/Common/" }
players = { path="../../Maze/Players/" }
referee = { path="../../Maze/Referee/" }
serde = "1.0.147"
serde_json = "1.0.87"
