[package]
name = "XGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="xgames"
path="src/lib.rs"
[[bin]]
name="xgames"
path="src/main.rs"

[[bin]]
name="xgames-with-observer"
path="src/observer-main.rs"

[dependencies]
common = { path="../../Maze/Common/" }
players = { path="../../Maze/Players/" }
referee = { path="../../Maze/Referee/" }
serde = "1.0.147"
serde_json = "1.0.87"
egui = "0.19.0"
eframe = "0.19.0"
parking_lot = "0.12.1"
anyhow = "1.0.66"
