[package]
name = "xbad2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="xbad2"
path="src/lib.rs"

[[bin]]
name="xbad2"
path="src/main.rs"

[dependencies]
anyhow = "1.0.66"
common = { path="../../Maze/Common/" }
players = { path="../../Maze/Players/" }
referee = { path="../../Maze/Referee/" }
serde = "1.0.147"
serde_json = "1.0.87"
