[package]
name = "Client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "client.rs"

[dependencies]
common = { path = "../Common" }
remote = { path = "../Remote" }
players = { path = "../Players" }
clap = { version = "4.0.23", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
