[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "state.rs"

[dependencies]
aliri_braid = "0.2.4"
hex = { version = "0.4.3", features = ["serde"] }
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
unordered-pair = { version = "0.2.4", features = ["serde"] }
