[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "state.rs"

[dependencies]
aliri_braid = "0.2.4"
egui_extras = { version = "0.19.0", features = ["image"] }
hex = { version = "0.4.3", features = ["serde"] }
image = { version = "0.24.4", features = ["png"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
unordered-pair = { version = "0.2.4", features = ["serde"] }
