[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "player"
path = "lib.rs"

[[bin]]
name = "player"
path = "player.rs"

[dependencies]
common = { path = "../Common/" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
