[package]
name = "Referee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ref"
path = "referee.rs"

[dependencies]
common = { path = "../Common/" }
players = { path = "../Players/" }
rand = "0.8.5"
rand_chacha = "0.3.1"
