[package]
name = "remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "remote"
path = "lib.rs"

[dependencies]
anyhow = "1.0.66"
common = {path = "../Common"}
players = {path = "../Players"}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
